--- a/Auth_/PC_Forgot_ViewController.xib
+++ b/Auth_/PC_Forgot_ViewController.xib
@@ -207,7 +207,7 @@
     </designables>
     <resources>
         <image name="ico_arrow_l" width="33.333332061767578" height="33.333332061767578"/>
-        <image name="ico_user" width="33.333332061767578" height="33.333332061767578"/>
+        <image name="ico_user" width="32" height="32"/>
         <image name="logo" width="142" height="61.333332061767578"/>
     </resources>
 </document>
