--- a/Search_/Search_ViewController.xib
+++ b/Search_/Search_ViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Search_ViewController" customModule="HearThis" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Search_ViewController" customModule="MeBook" customModuleProvider="target">
             <connections>
                 <outlet property="collectionBook" destination="HO7-Kn-qFu" id="Qvk-dr-xLN"/>
                 <outlet property="collectionView" destination="b8W-PC-frw" id="7VR-Zu-uAQ"/>
@@ -34,14 +35,14 @@
                                 <constraint firstAttribute="width" constant="44" id="BcI-Zt-d39"/>
                                 <constraint firstAttribute="height" constant="44" id="FsM-Sr-aE9"/>
                             </constraints>
-                            <state key="normal" image="icon_back"/>
+                            <state key="normal" image="ico_arrow_l_white"/>
                             <connections>
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="TGs-lV-MfT"/>
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B82-XP-zj2">
                             <rect key="frame" x="60" y="14" width="338" height="38"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="38" id="6fo-xn-04C"/>
                             </constraints>
@@ -74,7 +75,8 @@
                             </connections>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <viewLayoutGuide key="safeArea" id="F0U-Ry-lXy"/>
+                    <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="HMM-gb-sZC" firstAttribute="top" secondItem="F0U-Ry-lXy" secondAttribute="top" constant="10" id="0fw-Bs-thc"/>
                         <constraint firstItem="HMM-gb-sZC" firstAttribute="leading" secondItem="B82-XP-zj2" secondAttribute="trailing" constant="8" id="349-YS-nji"/>
@@ -88,7 +90,6 @@
                         <constraint firstAttribute="height" constant="64" id="pp6-IQ-CPO"/>
                         <constraint firstItem="B82-XP-zj2" firstAttribute="leading" secondItem="tHn-ll-PiU" secondAttribute="trailing" constant="8" id="szO-O5-RRO"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="F0U-Ry-lXy"/>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="b8W-PC-frw">
                     <rect key="frame" x="10" y="116" width="394" height="736"/>
@@ -106,7 +107,7 @@
                 </collectionView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="HO7-Kn-qFu">
                     <rect key="frame" x="10" y="116" width="394" height="736"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sHn-WK-hXQ">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -119,6 +120,7 @@
                     </connections>
                 </collectionView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="9j0-Gw-P8N"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="2hx-Zc-Jz2" firstAttribute="leading" secondItem="9j0-Gw-P8N" secondAttribute="leading" id="62R-06-iHK"/>
@@ -133,12 +135,14 @@
                 <constraint firstItem="2hx-Zc-Jz2" firstAttribute="top" secondItem="9j0-Gw-P8N" secondAttribute="top" id="ub0-zb-VA3"/>
                 <constraint firstItem="b8W-PC-frw" firstAttribute="top" secondItem="2hx-Zc-Jz2" secondAttribute="bottom" constant="8" id="wGd-vU-TwW"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="9j0-Gw-P8N"/>
             <point key="canvasLocation" x="139.13043478260872" y="144.64285714285714"/>
         </view>
     </objects>
     <resources>
-        <image name="icon_back" width="33" height="33"/>
+        <image name="ico_arrow_l_white" width="33" height="33"/>
         <image name="icon_close" width="33" height="33"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
