--- a/Tabbar_/Second_Tab_ViewController.xib
+++ b/Tabbar_/Second_Tab_ViewController.xib
@@ -56,7 +56,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="vmB-9m-Vta" firstAttribute="top" secondItem="Gur-fu-bRv" secondAttribute="top" constant="22" id="1h1-C9-gQV"/>
                         <constraint firstAttribute="trailing" secondItem="UcN-iD-eMZ" secondAttribute="trailing" constant="8" id="Exl-vR-SP8"/>
